recursion.cons.lessons.recursion.cons.Remove.scala.error
remove:4: error: type mismatch;
 found   : Int(0)
 required: List[Int]
		return 0;
                       ^